--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -37,13 +37,13 @@
   #calculator-grid {
     margin-top: 5rem;
     display: grid; /* display grid by default */
-    width: 20rem;
-    height: 30rem;
+    width: 22rem;
+    height: 32rem;
     gap: 1rem;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(7, 1fr);
     background-color: #D17C66;
-    border: 1px black solid;
+    border: 2px black solid;
     box-shadow: 5px 5px 5px black;
     padding: 1rem;
     font-size: 2rem;
@@ -60,6 +60,16 @@
     border-bottom: 3px black solid;
   }
 
+  .button:not(#screen-disp):hover {
+    background-color: #3FAAC5;
+    cursor: pointer;
+  }
+
+  .button:not(#screen-disp):active {
+    background-color: #3FAAC5;
+    transform: translateY(2px);
+  }
+
  #screen-disp {
     font-family: 'Orbitron', sans-serif;
     padding: 1rem;
@@ -68,6 +78,8 @@
     text-shadow: none;
     font-weight: lighter;
     color: black;
+    border-bottom: 1px black solid;
+    border: 2px black solid;
   }
   
   .button:nth-child(1) {
@@ -83,4 +95,9 @@
   .button:nth-child(3) {
     grid-row: 3;
     grid-column: 3 / span 2;
+  }
+
+  .button:nth-child(22) {
+    grid-row: 7 / span 2;
+    grid-column: 4;
   }
