--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -44,6 +44,7 @@
     grid-template-rows: repeat(7, 1fr);
     background-color: #D17C66;
     border: 2px black solid;
+    border-radius: 15px;
     box-shadow: 5px 5px 5px black;
     padding: 1rem;
     font-size: 2rem;
@@ -59,30 +60,32 @@
     border: 1px black solid;
     border-bottom: 3px black solid;
   }
-
+  
   .button:not(#screen-disp):hover {
     background-color: #3FAAC5;
     cursor: pointer;
   }
-
+  
   .button:not(#screen-disp):active {
     background-color: #3FAAC5;
-    transform: translateY(2px);
+    transform: translateY(1px);
+    border-bottom: 1px black solid;
   }
-
- #screen-disp {
+  
+  #screen-disp {
     font-family: 'Orbitron', sans-serif;
-    padding: 1rem;
+    text-align: right;
+    /*word-wrap: break-word;*/
     justify-content: end;
+    padding: 1rem;
+    padding-top: 1.5rem;
     font-size: 2rem;
     text-shadow: none;
     font-weight: lighter;
+    background-color: #C0C0C0;
     color: black;
     border-bottom: 1px black solid;
     border: 2px black solid;
-  }
-  
-  .button:nth-child(1) {
     grid-row: 1 / span 2;
     grid-column: 1 / span 4;
   }
@@ -96,8 +99,47 @@
     grid-row: 3;
     grid-column: 3 / span 2;
   }
-
+  
   .button:nth-child(22) {
     grid-row: 7 / span 2;
     grid-column: 4;
+  }
+  
+  /* On screens that are 750px or less */
+  @media screen and (max-width: 750px) {
+    #calculator-grid {
+      width: 18rem;
+      height: 28rem;
+      font-size: 1.5rem;
+      margin-top: 4rem;
+      padding: .75rem;
+    }
+  
+    #screen-disp {
+      font-size: 1.5rem;
+      padding: .75rem;
+      padding-top: 2rem;
+    }
+  }
+  
+  /* On screens that are 600px or less */
+  @media screen and (max-width: 500px) {
+    #calculator-grid {
+      width: 15rem;
+      height: 25rem;
+      font-size: 1.5rem;
+      gap: .5rem;
+      margin-top: 3rem;
+      padding: .5rem;
+    }
+  
+    #screen-disp {
+      font-size: 1.5rem;
+      padding: .5rem;
+      padding-top: 2rem;
+    }
+  
+    .button {
+      padding: 0;
+    }
   }
