--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -88,6 +88,11 @@
     border: 2px black solid;
     grid-row: 1 / span 2;
     grid-column: 1 / span 4;
+
+    vertical-align: bottom;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   
   .button:nth-child(2) {
