--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -71,11 +71,10 @@
     transform: translateY(1px);
     border-bottom: 1px black solid;
   }
-  
+  /*
   #screen-disp {
     font-family: 'Orbitron', sans-serif;
     text-align: right;
-    /*word-wrap: break-word;*/
     justify-content: end;
     padding: 1rem;
     padding-top: 1.5rem;
@@ -94,7 +93,33 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  */
+
+  .screen {
+    font-family: 'Orbitron', sans-serif;
+    text-shadow: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 1rem;
+    background-color: #C0C0C0;
+    color: black;
+    border-bottom: 1px black solid;
+    border: 2px black solid;
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 4;
+  }
+
+  #current-display {
+    font-size: 2rem;
+    padding-top: 2rem;
+    position: absolute;
+  } 
   
+  #hist-display {
+    font-size: 1rem;
+  }
+
   .button:nth-child(2) {
     grid-row: 3;
     grid-column: 1 / span 2;
