--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -76,6 +76,7 @@
     color: var(--synth-color5);
     text-shadow: -1px 0 black, 0 2px black, 1px 0 black, 0 -1px black;
     border: 1px black solid;
+    border-radius: 15px;
     border-bottom: 3px black solid;
   }
   
